
--------------------------------------------------------------------------------
Changes for 2.0.5rc1

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, French and Russian translations; thanks to Zabbix translators (Richlv)
.......PS. [ZBX-5920] added prefetching of 2 MB of data for Oracle sql selects (dimir)

Bug fixes:
.......PS. [ZBX-3379] added SourceIP support for SNMP items (dimir)
A.F....... [ZBX-6002] optimized fetching latest service alarms in Service API (dotneft, Eduard)
..F....... [ZBX-5986] fixed page filter in monitoring->graphs (Oleg)
..F....... [ZBX-6004] monitoring->screens page optimization (Vedmak)
..F....... [ZBX-6003] monitoring->maps page optimization (Vedmak)
A.F.....S. [ZBX-5862] fixed sql condition algorithm (Andris, Eduard, Sasha)
A.F....... [ZBX-4789] improved performance of permissions check (Oleg, dotneft, Sasha)
..F....... [ZBX-5979] fixed monitoring events page, hidden triggers with not monitored items (Oleg)
..F....... [ZBX-5985] fixed DB error in "Configuration of web monitoring" for PostgreSQL (Oleg)
..F....... [ZBX-5699] fixed configuration graph host id passing in navigation (Eduard)
A......... [ZBX-1946] improved error messages when validating screen item row and column spans (Pavels)
..F....... [ZBX-3402] disabled "store value" overriding for host items inherited from templates (Pavels)
..F....... [ZBX-3402] fixed the "formula" input not being displayed when editing templated items with a disabled multiplier (Pavels)
.......PS. [ZBX-3071] fixed reading and writing of Oracle NCLOB fields (Andris, Sasha)
A.F....... [ZBX-5704] fixed validation on file uploading (Eduard)
A......... [ZBX-5737] fixed image saving using Oracle (Eduard)
..F....... [ZBX-5809] fixed global URL displaying in map screen item (Eduard)
A......... [ZBX-5837] fixed filtering by proxy status in HostGroup API get method (Eduard)
..F....... [ZBX-5899] implemented flicker-free graph support for web monitoring (Eduard)