@@ -83,6 +83,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, French and Russian translati
 .......PS. [ZBX-5920] added prefetching of 2 MB of data for Oracle sql selects (dimir)
 
 Bug fixes:
+.......PS. [ZBX-5981] fixed incorrect use of function assert() if build option -DNDEBUG was used, it caused random crashes (Alexei)
 .......PS. [ZBX-3379] added SourceIP support for SNMP items (dimir)
 A.F....... [ZBX-6002] optimized fetching latest service alarms in Service API (dotneft, Eduard)
 ..F....... [ZBX-5986] fixed page filter in monitoring->graphs (Oleg)
